test/files/neg/t1224.check
t1224.scala:3: error: illegal cyclic reference involving type T
abstract class A {
               ^
one error found
